--- a/Collection/Android/Android系统源代码情景分析/AOSP/快捷链接.md
+++ b/Collection/Android/Android系统源代码情景分析/AOSP/快捷链接.md
@@ -1,1 +1,1 @@
-[Pixel 不同版本 受支持的明确说明](https://support.google.com/nexus/answer/4457705?hl=zh-Hans#nexus_devices)
+[Pixel 不同版本 受支持的明确说明](https://support.google.com/nexus/answer/4457705?hl=zh-Hans)
