aosp6 build on ubuntu18 failed

--- a/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.md
+++ b/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.md
@@ -1,5 +1,8 @@
 
-环境 : Ubuntu22.04(ARM64)
+操作系統 : Ubuntu18.04
+CPU  ： Intel(R) Core(TM)
+文件系统 ： NTFS （ntfs本身大小写敏感 ，只是 Windows 系统大小写不敏感）
+
 
 ## 0x00. 个人操作记录不具有参考性
 
@@ -10,17 +13,20 @@
 这里做的只是一个个人操作记录 , 你应该有你自己的操作记录 . 
 
 ## 0x01. 事先准备
-1. sudo apt-get install  gnupg flex bison build-essential zip curl zlib1g-dev  libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig \
-git-core libc6-dev-i386
+1. sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
 
-2. sudo apt-get install  gnupg flex bison build-essential zip curl zlib1g-dev  libncurses5  x11proto-core-dev libx11-dev  libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig \
-git libc6-dev-i386-amd64-cross 
+2. 下载 open-JDK-8
 
-lib32ncurses5-dev lib32z1-dev
+3. export EXPERIMENTAL_USE_JAVA8=true
+
 
 ## 0x02. [源代码控制工具](https://source.android.com/docs/setup/download?hl=zh-cn#installing-repo)
 
-使用 MacPorts 包管理工具 : `sudo port install repo `
+```
+sudo apt install repo 
+sudo mv /usr/bin/python /usr/bin/python.bak
+sudo ln -s /usr/bin/python3 /usr/bin/python
+```
 
 ## 0x03. [下载源代码](https://source.android.com/docs/setup/download/downloading?hl=zh-cn)
 
@@ -34,15 +40,18 @@ lib32ncurses5-dev lib32z1-dev
     - 选定分支方法 二 : https://source.android.com/docs/setup/about/build-numbers?hl=zh-cn#source-code-tags-and-builds
       - 关注 **标记** 列
     ```
-    repo init -u https://android.googlesource.com/platform/manifest -b android-6.0.0_r1
-
+    // repo init -u https://android.googlesource.com/platform/manifest -b android-6.0.0_r1
+    repo init -u https://mirrors.tuna.tsinghua.edu.cn/git/AOSP/platform/manifest -b android-6.0.0_r1
+    我们将 链接 替换为 清华 源
     ```
 
-3. 同步代码
+2. 同步代码
     ```  
     sysctl -n hw.logicalcpu // 查看 Mac 最大 CPU 核心数 ; https://opensource.apple.com/source/xnu/xnu-792.2.4/libkern/libkern/sysctl.h.auto.html
 
-    repo sync -c -j9
+
+    repo sync -c -j4   // 之所以 4  因为 清华源 压力太大 ， 他们希望我们不要超过 4 个线程
+    Fetching: 100% (450/450), done in 2h22m1.294s
     ```
    - 占用磁盘空间 175G
    - 用时 , 2h
@@ -51,11 +60,98 @@ lib32ncurses5-dev lib32z1-dev
 
 1. 导入编译指令 : `source build/envsetup.sh`
    - 使用 bash 执行导入动作 . 
-2. 开始编译 `lunch aosp_arm-eng`
-   - 报错 : 
+2. 开始编译 
      ```
-     build/core/envsetup.mk:90: *** Unable to determine HOST_ARCH from uname -sm: Darwin arm64!.  Stop.
+      12:25:34 tom@tom-pc android-6.0.0_r1 → lunch 
 
-     ** Don't have a product spec for: 'aosp_arm64'
-     ** Do you have the right repo manifest?
+      You're building on Linux
+
+      Lunch menu... pick a combo:
+         1. aosp_arm-eng
+         2. aosp_arm64-eng
+         3. aosp_mips-eng
+         4. aosp_mips64-eng
+         5. aosp_x86-eng
+         6. aosp_x86_64-eng
+         7. aosp_deb-userdebug
+         8. aosp_flo-userdebug
+         9. full_fugu-userdebug
+         10. aosp_fugu-userdebug
+         11. mini_emulator_arm64-userdebug
+         12. m_e_arm-userdebug
+         13. mini_emulator_mips-userdebug
+         14. mini_emulator_x86_64-userdebug
+         15. mini_emulator_x86-userdebug
+         16. aosp_flounder-userdebug
+         17. aosp_hammerhead-userdebug
+         18. aosp_hammerhead_fp-userdebug
+         19. aosp_shamu-userdebug
+
+      Which would you like? [aosp_arm-eng] aosp_x86_64-eng
+
+      ============================================
+      PLATFORM_VERSION_CODENAME=REL
+      PLATFORM_VERSION=6.0
+      TARGET_PRODUCT=aosp_x86_64
+      TARGET_BUILD_VARIANT=eng
+      TARGET_BUILD_TYPE=release
+      TARGET_BUILD_APPS=
+      TARGET_ARCH=x86_64
+      TARGET_ARCH_VARIANT=x86_64
+      TARGET_CPU_VARIANT=
+      TARGET_2ND_ARCH=x86
+      TARGET_2ND_ARCH_VARIANT=x86
+      TARGET_2ND_CPU_VARIANT=
+      HOST_ARCH=x86_64
+      HOST_OS=linux
+      HOST_OS_EXTRA=Linux-5.4.0-84-generic-x86_64-with-Ubuntu-18.04-bionic
+      HOST_BUILD_TYPE=release
+      BUILD_ID=MRA58K
+      OUT_DIR=out
+      ============================================
+
      ```
+
+
+## 错误信息
+
+```
+01:09:02 tom@tom-pc android-6.0.0_r1 → source build/envsetup.sh 
+
+01:09:04 tom@tom-pc android-6.0.0_r1 → lunch aosp_x86_64-eng 
+
+============================================
+
+01:09:04 tom@tom-pc android-6.0.0_r1 → m
+make: 进入目录“/media/tom/vm/AOSP/android-6.0.0_r1”
+
+============================================
+  File "build/tools/findleaves.py", line 95
+    print r
+          ^
+SyntaxError: Missing parentheses in call to 'print'. Did you mean print(r)?
+Checking build tools versions...
+************************************************************
+You are attempting to build with the incorrect version
+of java.
+ 
+Your version is: openjdk version "1.7.0_75" OpenJDK Runtime Environment (build 1.7.0_75-b13) OpenJDK 64-Bit Server VM (build 24.75-b04, mixed mode).
+The required version is: "1.7.x"
+ 
+Please follow the machine setup instructions at
+    https://source.android.com/source/initializing.html
+************************************************************
+build/core/main.mk:171: *** stop。 停止。
+make: 离开目录“/media/tom/vm/AOSP/android-6.0.0_r1”
+
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+ 上面有两个问题 ， python 版本问题导致的错误通过修改 python 版本修正
+   - 修改 python 版本为 2.x 
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+   jdk 版本问题 
+  Ubuntu 18 下载不到 open-jdk-7 了， 手动下载压缩包解压并设置环境变量 ， 也不可用
+  我们下载 open-jdk-8 替代
+   - 下载 open-JDK-8
+   -  export EXPERIMENTAL_USE_JAVA8=true
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+```
