build aosp and lunch emulator success

--- a/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.ubuntu18.md
+++ b/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.ubuntu18.md
@@ -62,10 +62,50 @@ sudo ln -s /usr/bin/python3 /usr/bin/python
 2. 开始编译 
      ```
       12:25:34 tom@tom-pc android-6.0.0_r1 → lunch aosp_hammerhead-userdebug
+      编译成功后 执行 emulator 一直黑屏
      ```
+3. 再重新编译试试
+     ```
+     06:56:13 tom@tom-pc android-6.0.0_r1 → source build/envsetup.sh 
+     06:56:20 tom@tom-pc android-6.0.0_r1 → lunch aosp_x86-eng
+     06:56:20 tom@tom-pc android-6.0.0_r1 → make clean
+     06:56:20 tom@tom-pc android-6.0.0_r1 → make -j8
+
+      06:56:20 tom@tom-pc android-6.0.0_r1 → emulator
+      emulator: WARNING: system partition size adjusted to match image file (1280 MB > 200 MB)
+
+      emulator: WARNING: data partition size adjusted to match image file (550 MB > 200 MB)
+
+      emulator: ERROR: x86 emulation currently requires hardware acceleration!
+      Please ensure KVM is properly installed and usable.
+      CPU acceleration status: This user doesn't have permissions to use KVM (/dev/kvm).
+      
+      06:56:20 tom@tom-pc android-6.0.0_r1 → sudo apt install qemu-kvm
+      06:56:20 tom@tom-pc android-6.0.0_r1 → sudo adduser tom kvm
+      06:56:20 tom@tom-pc android-6.0.0_r1 → sudo chown tom /dev/kvm
+      06:56:20 tom@tom-pc android-6.0.0_r1 → emulator               ------------------------------------              success
+     ```
+
 
 ## 0x05. 编译完成将编译结果写入虚拟机
 
+不用特殊操作 编译完成后 直接 执行 `emulator` 指令即可
+
+但是当设备重启后再想运行这个模拟器 :
+0. `cd aosp_path`
+1. `source build/envsetup.sh`
+3. `lunch 当时编译的那个版本号其他的没有测试`
+    - 我暂时用的这个 : `aosp_x86-eng` 第 23 个选项
+4. `emulator`
+    - 可以通过 `which emulator` 来查看可执行文件位置
+
+使用指定的编译结果启动虚拟机
+```
+emulator    \
+                    -system      ./out/target/product/hammerhead/system.img  \
+                    -ramdisk  ./out/target/product/hammerhead/ramdisk.img  \
+                    -data         ./out/target/product/hammerhead/userdata.img
+```
 
 ## 0x06. 查看源代码
 
