--- a/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.ubuntu18.md
+++ b/_posts/Collections/Android/Android系统源代码情景分析/AOSP/2.下载源代码.ubuntu18.md
@@ -13,7 +13,7 @@ CPU  ： Intel(R) Core(TM)
 这里做的只是一个个人操作记录 , 你应该有你自己的操作记录 . 
 
 ## 0x01. 事先准备
-1. sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
+1. sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig ccache
 
 2. 下载&安装 open-JDK-7
 
@@ -26,6 +26,17 @@ sudo apt install repo
 sudo mv /usr/bin/python /usr/bin/python.bak
 sudo ln -s /usr/bin/python3 /usr/bin/python
 ```
+
+Ubuntu 20 找不到 repo 包 , 需要[手动安装](https://askubuntu.com/a/1276007)
+
+You can install it manually as well as it's a single script.
+```
+$ mkdir -p ~/.bin
+$ PATH="${HOME}/.bin:${PATH}"
+$ curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
+$ chmod a+rx ~/.bin/repo
+```
+
 
 ## 0x03. [下载源代码](https://source.android.com/docs/setup/download/downloading?hl=zh-cn)
 
@@ -250,8 +261,9 @@ make: *** [out/host/linux-x86/obj32/SHARED_LIBRARIES/libart-compiler_intermediat
 
 ```
 lunch  aosp_x86_64-eng
+make clean
 make clobber
-make -j8
+make -j8 &>> log.log
 ---------------------------------------------------------
 Please submit a full bug report,
 with preprocessed source if appropriate.
