--- a/_posts/Collections/Android/Android系统源代码情景分析/AOSP/3.Ubuntu多版本OpenJDK.md
+++ b/_posts/Collections/Android/Android系统源代码情景分析/AOSP/3.Ubuntu多版本OpenJDK.md
@@ -13,7 +13,7 @@ Ubuntu 18.04 默认源里没有 jdk7  ： https://askubuntu.com/a/857218
 2. sudo apt-get upgrade
 3. 替换源为 ubuntu14.04 : https://mirrors.tuna.tsinghua.edu.cn/help/ubuntu/
 4. sudo apt-get update
-5. sudo apt-get remove tzdatad  // 直接安装因为依赖原因失败 ： https://www.cnblogs.com/suwy/p/8569800.html
+5. sudo apt-get remove tzdata  // 直接安装因为依赖原因失败 ： https://www.cnblogs.com/suwy/p/8569800.html
 6. sudo apt-get install openjdk-7-*
 7. 替换源为 ubuntu18.04 : https://mirrors.tuna.tsinghua.edu.cn/help/ubuntu/
 8. sudo apt-get update
